# slope2d

./: Cargo.toml  LICENSE-MIT  README.md
examples/: movement.rs  sandbox.rs
src/: body.rs  collider.rs  configuration.rs  id.rs  lib.rs  num.rs  object.rs  world.rs
testbed/: Cargo.toml
testbed/src/: lib.rs  shader.wgsl
